--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH,HEAD
 spring.web.cors.allowed-headers=Authorization,Content-Type,X-Requested-With,Accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers
 spring.web.cors.allow-credentials=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dwa
+spring.datasource.url=jdbc:mysql://localhost:3306/blockChain
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=mdvd2004156
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.hikari.maximum-pool-size=20
